// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manufacturing/base 1`] = `
Object {
  "cul_functions": Map {
    "0_revenue" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 60,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 23,
          "line": 1,
        },
      },
      "name": "revenue",
      "reason": "definition",
    },
    "0_costs" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 40,
          "index": 142,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 123,
          "line": 6,
        },
      },
      "name": "costs",
      "reason": "definition",
    },
    "0_profit" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 47,
          "index": 192,
          "line": 8,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 167,
          "line": 8,
        },
      },
      "name": "profit",
      "reason": "definition",
    },
    "0_units" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 240,
          "line": 11,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 226,
          "line": 11,
        },
      },
      "name": "units",
      "reason": "definition",
    },
    "0_units_in" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
      ],
      "name": "units_in",
      "reason": "input definition",
    },
    "0_price" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 277,
          "line": 12,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 263,
          "line": 12,
        },
      },
      "name": "price",
      "reason": "definition",
    },
    "0_price_in" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "price_in",
      ],
      "name": "price_in",
      "reason": "input definition",
    },
  },
  "cul_input_map": Map {
    "0_revenue" => Set {
      "units_in",
      "price_in",
    },
    "0_costs" => Set {
      "units_in",
    },
    "0_profit" => Set {
      "units_in",
      "price_in",
    },
    "0_units" => Set {
      "units_in",
    },
    "0_units_in" => Set {
      "units_in",
    },
    "0_price" => Set {
      "price_in",
    },
    "0_price_in" => Set {
      "price_in",
    },
  },
  "cul_links": Set {
    Object {
      "from": "0_units",
      "negs": Array [],
      "reason": "call",
      "to": "0_revenue",
    },
    Object {
      "from": "0_price",
      "negs": Array [],
      "reason": "call",
      "to": "0_revenue",
    },
    Object {
      "from": "0_units",
      "negs": Array [],
      "reason": "call",
      "to": "0_costs",
    },
    Object {
      "from": "0_revenue",
      "negs": Array [],
      "reason": "call",
      "to": "0_profit",
    },
    Object {
      "from": "0_costs",
      "negs": Array [],
      "reason": "call",
      "to": "0_profit",
    },
    Object {
      "from": "0_units_in",
      "reason": "input",
      "to": "0_units",
    },
    Object {
      "from": "0_price_in",
      "reason": "input",
      "to": "0_price",
    },
  },
  "cul_scope_ids_to_resource": Map {
    0 => "./base.cul.js",
  },
  "import_sources_to_resource": Map {},
}
`;

exports[`manufacturing/impactsAB 1`] = `
Object {
  "cul_functions": Map {
    "0_A_revenue" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "revenue",
      "inputs": Array [],
      "name": "A_revenue",
      "reason": "explicit import",
    },
    "0_B_revenue" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 2,
      "imported": "revenue",
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "name": "B_revenue",
      "reason": "explicit import",
    },
    "0_revenue_impact" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 61,
          "index": 460,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 30,
          "index": 429,
          "line": 6,
        },
      },
      "name": "revenue_impact",
      "reason": "definition",
    },
    "1_B_revenue" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 2,
      "inputs": Array [],
      "name": "B_revenue",
      "reason": "implicit import",
    },
    "1_revenue_impact" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "name": "revenue_impact",
      "reason": "implicit import",
    },
    "1_revenue" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 3,
      "imported": "revenue",
      "inputs": Array [],
      "name": "revenue",
      "reason": "explicit import",
    },
    "1_units" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 30,
          "index": 89,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 80,
          "line": 4,
        },
      },
      "name": "units",
      "reason": "definition",
    },
    "1_price" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 30,
          "index": 121,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 112,
          "line": 5,
        },
      },
      "name": "price",
      "reason": "definition",
    },
    "2_A_revenue" => Object {
      "cul_scope_id": 2,
      "cul_source_scope_id": 1,
      "inputs": Array [],
      "name": "A_revenue",
      "reason": "implicit import",
    },
    "2_revenue_impact" => Object {
      "cul_scope_id": 2,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "name": "revenue_impact",
      "reason": "implicit import",
    },
    "2_revenue" => Object {
      "cul_scope_id": 2,
      "cul_source_scope_id": 4,
      "imported": "revenue",
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "name": "revenue",
      "reason": "explicit import",
    },
    "2_units_1" => Object {
      "cul_scope_id": 2,
      "cul_source_scope_id": 4,
      "imported": "units_",
      "inputs": Array [
        "units_in",
      ],
      "name": "units_1",
      "reason": "explicit import",
    },
    "2_price_1" => Object {
      "cul_scope_id": 2,
      "cul_source_scope_id": 4,
      "imported": "price_",
      "inputs": Array [
        "price_in",
      ],
      "name": "price_1",
      "reason": "explicit import",
    },
    "2_units" => Object {
      "cul_scope_id": 2,
      "cul_source_scope_id": 2,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 70,
          "index": 1488,
          "line": 22,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 1412,
          "line": 21,
        },
      },
      "name": "units",
      "reason": "definition",
    },
    "2_price" => Object {
      "cul_scope_id": 2,
      "cul_source_scope_id": 2,
      "inputs": Array [
        "price_in",
        "price_multiplier_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 57,
          "index": 1547,
          "line": 23,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 1511,
          "line": 23,
        },
      },
      "name": "price",
      "reason": "definition",
    },
    "2_price_multiplier" => Object {
      "cul_scope_id": 2,
      "cul_source_scope_id": 2,
      "inputs": Array [
        "price_multiplier_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 57,
          "index": 1621,
          "line": 26,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 32,
          "index": 1596,
          "line": 26,
        },
      },
      "name": "price_multiplier",
      "reason": "definition",
    },
    "2_price_multiplier_in" => Object {
      "cul_scope_id": 2,
      "cul_source_scope_id": 2,
      "inputs": Array [
        "price_multiplier_in",
      ],
      "name": "price_multiplier_in",
      "reason": "input definition",
    },
    "2_step" => Object {
      "cul_scope_id": 2,
      "cul_source_scope_id": 2,
      "inputs": Array [
        "step_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 33,
          "index": 1656,
          "line": 27,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 20,
          "index": 1643,
          "line": 27,
        },
      },
      "name": "step",
      "reason": "definition",
    },
    "2_step_in" => Object {
      "cul_scope_id": 2,
      "cul_source_scope_id": 2,
      "inputs": Array [
        "step_in",
      ],
      "name": "step_in",
      "reason": "input definition",
    },
    "3_B_revenue" => Object {
      "cul_scope_id": 3,
      "cul_source_scope_id": 2,
      "inputs": Array [],
      "name": "B_revenue",
      "reason": "implicit import",
    },
    "3_revenue_impact" => Object {
      "cul_scope_id": 3,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "name": "revenue_impact",
      "reason": "implicit import",
    },
    "3_units" => Object {
      "cul_scope_id": 3,
      "cul_source_scope_id": 1,
      "inputs": Array [],
      "name": "units",
      "reason": "implicit import",
    },
    "3_price" => Object {
      "cul_scope_id": 3,
      "cul_source_scope_id": 1,
      "inputs": Array [],
      "name": "price",
      "reason": "implicit import",
    },
    "3_revenue" => Object {
      "cul_scope_id": 3,
      "cul_source_scope_id": 3,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 60,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 23,
          "line": 1,
        },
      },
      "name": "revenue",
      "reason": "definition",
    },
    "3_costs" => Object {
      "cul_scope_id": 3,
      "cul_source_scope_id": 3,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 40,
          "index": 142,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 123,
          "line": 6,
        },
      },
      "name": "costs",
      "reason": "definition",
    },
    "3_profit" => Object {
      "cul_scope_id": 3,
      "cul_source_scope_id": 3,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 47,
          "index": 192,
          "line": 8,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 167,
          "line": 8,
        },
      },
      "name": "profit",
      "reason": "definition",
    },
    "3_units_" => Object {
      "cul_scope_id": 3,
      "cul_source_scope_id": 3,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 240,
          "line": 11,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 226,
          "line": 11,
        },
      },
      "name": "units_",
      "reason": "definition (renamed)",
    },
    "3_units_in" => Object {
      "cul_scope_id": 3,
      "cul_source_scope_id": 3,
      "inputs": Array [
        "units_in",
      ],
      "name": "units_in",
      "reason": "input definition",
    },
    "3_price_" => Object {
      "cul_scope_id": 3,
      "cul_source_scope_id": 3,
      "inputs": Array [
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 277,
          "line": 12,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 263,
          "line": 12,
        },
      },
      "name": "price_",
      "reason": "definition (renamed)",
    },
    "3_price_in" => Object {
      "cul_scope_id": 3,
      "cul_source_scope_id": 3,
      "inputs": Array [
        "price_in",
      ],
      "name": "price_in",
      "reason": "input definition",
    },
    "4_A_revenue" => Object {
      "cul_scope_id": 4,
      "cul_source_scope_id": 1,
      "inputs": Array [],
      "name": "A_revenue",
      "reason": "implicit import",
    },
    "4_revenue_impact" => Object {
      "cul_scope_id": 4,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "name": "revenue_impact",
      "reason": "implicit import",
    },
    "4_units" => Object {
      "cul_scope_id": 4,
      "cul_source_scope_id": 2,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "name": "units",
      "reason": "implicit import",
    },
    "4_price" => Object {
      "cul_scope_id": 4,
      "cul_source_scope_id": 2,
      "inputs": Array [
        "price_in",
        "price_multiplier_in",
      ],
      "name": "price",
      "reason": "implicit import",
    },
    "4_price_multiplier" => Object {
      "cul_scope_id": 4,
      "cul_source_scope_id": 2,
      "inputs": Array [
        "price_multiplier_in",
      ],
      "name": "price_multiplier",
      "reason": "implicit import",
    },
    "4_step" => Object {
      "cul_scope_id": 4,
      "cul_source_scope_id": 2,
      "inputs": Array [
        "step_in",
      ],
      "name": "step",
      "reason": "implicit import",
    },
    "4_revenue" => Object {
      "cul_scope_id": 4,
      "cul_source_scope_id": 4,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 60,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 23,
          "line": 1,
        },
      },
      "name": "revenue",
      "reason": "definition",
    },
    "4_costs" => Object {
      "cul_scope_id": 4,
      "cul_source_scope_id": 4,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 40,
          "index": 142,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 123,
          "line": 6,
        },
      },
      "name": "costs",
      "reason": "definition",
    },
    "4_profit" => Object {
      "cul_scope_id": 4,
      "cul_source_scope_id": 4,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 47,
          "index": 192,
          "line": 8,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 167,
          "line": 8,
        },
      },
      "name": "profit",
      "reason": "definition",
    },
    "4_units_" => Object {
      "cul_scope_id": 4,
      "cul_source_scope_id": 4,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 240,
          "line": 11,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 226,
          "line": 11,
        },
      },
      "name": "units_",
      "reason": "definition (renamed)",
    },
    "4_units_in" => Object {
      "cul_scope_id": 4,
      "cul_source_scope_id": 4,
      "inputs": Array [
        "units_in",
      ],
      "name": "units_in",
      "reason": "input definition",
    },
    "4_price_" => Object {
      "cul_scope_id": 4,
      "cul_source_scope_id": 4,
      "inputs": Array [
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 277,
          "line": 12,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 263,
          "line": 12,
        },
      },
      "name": "price_",
      "reason": "definition (renamed)",
    },
    "4_price_in" => Object {
      "cul_scope_id": 4,
      "cul_source_scope_id": 4,
      "inputs": Array [
        "price_in",
      ],
      "name": "price_in",
      "reason": "input definition",
    },
  },
  "cul_input_map": Map {
    "0_A_revenue" => Set {},
    "0_B_revenue" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "0_revenue_impact" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "1_B_revenue" => Set {},
    "1_revenue_impact" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "1_revenue" => Set {},
    "1_units" => Set {},
    "1_price" => Set {},
    "2_A_revenue" => Set {},
    "2_revenue_impact" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "2_revenue" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "2_units_1" => Set {
      "units_in",
    },
    "2_price_1" => Set {
      "price_in",
    },
    "2_units" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "2_price" => Set {
      "price_in",
      "price_multiplier_in",
    },
    "2_price_multiplier" => Set {
      "price_multiplier_in",
    },
    "2_price_multiplier_in" => Set {
      "price_multiplier_in",
    },
    "2_step" => Set {
      "step_in",
    },
    "2_step_in" => Set {
      "step_in",
    },
    "3_B_revenue" => Set {},
    "3_revenue_impact" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "3_units" => Set {},
    "3_price" => Set {},
    "3_revenue" => Set {},
    "3_costs" => Set {},
    "3_profit" => Set {},
    "3_units_" => Set {
      "units_in",
    },
    "3_units_in" => Set {
      "units_in",
    },
    "3_price_" => Set {
      "price_in",
    },
    "3_price_in" => Set {
      "price_in",
    },
    "4_A_revenue" => Set {},
    "4_revenue_impact" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "4_units" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "4_price" => Set {
      "price_in",
      "price_multiplier_in",
    },
    "4_price_multiplier" => Set {
      "price_multiplier_in",
    },
    "4_step" => Set {
      "step_in",
    },
    "4_revenue" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "4_costs" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "4_profit" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "4_units_" => Set {
      "units_in",
    },
    "4_units_in" => Set {
      "units_in",
    },
    "4_price_" => Set {
      "price_in",
    },
    "4_price_in" => Set {
      "price_in",
    },
  },
  "cul_links": Set {
    Object {
      "from": "1_revenue",
      "reason": "explicit import",
      "to": "0_A_revenue",
    },
    Object {
      "from": "2_revenue",
      "reason": "explicit import",
      "to": "0_B_revenue",
    },
    Object {
      "from": "0_A_revenue",
      "negs": Array [],
      "reason": "call",
      "to": "0_revenue_impact",
    },
    Object {
      "from": "0_B_revenue",
      "negs": Array [],
      "reason": "call",
      "to": "0_revenue_impact",
    },
    Object {
      "from": "2_B_revenue",
      "reason": "implicit import",
      "to": "1_B_revenue",
    },
    Object {
      "from": "0_revenue_impact",
      "reason": "implicit import",
      "to": "1_revenue_impact",
    },
    Object {
      "from": "3_revenue",
      "reason": "explicit import",
      "to": "1_revenue",
    },
    Object {
      "from": "1_A_revenue",
      "reason": "implicit import",
      "to": "2_A_revenue",
    },
    Object {
      "from": "0_revenue_impact",
      "reason": "implicit import",
      "to": "2_revenue_impact",
    },
    Object {
      "from": "4_revenue",
      "reason": "explicit import",
      "to": "2_revenue",
    },
    Object {
      "from": "4_units_",
      "reason": "explicit import",
      "to": "2_units_1",
    },
    Object {
      "from": "4_price_",
      "reason": "explicit import",
      "to": "2_price_1",
    },
    Object {
      "from": "2_step",
      "negs": Array [],
      "reason": "call",
      "to": "2_units",
    },
    Object {
      "from": "2_units_1",
      "negs": Array [],
      "reason": "call",
      "to": "2_units",
    },
    Object {
      "from": "2_price",
      "negs": Array [],
      "reason": "call",
      "to": "2_units",
    },
    Object {
      "from": "2_price_1",
      "negs": Array [],
      "reason": "call",
      "to": "2_units",
    },
    Object {
      "from": "2_units_1",
      "negs": Array [],
      "reason": "call",
      "to": "2_units",
    },
    Object {
      "from": "2_price_1",
      "negs": Array [],
      "reason": "call",
      "to": "2_price",
    },
    Object {
      "from": "2_price_multiplier",
      "negs": Array [],
      "reason": "call",
      "to": "2_price",
    },
    Object {
      "from": "2_price_multiplier_in",
      "reason": "input",
      "to": "2_price_multiplier",
    },
    Object {
      "from": "2_step_in",
      "reason": "input",
      "to": "2_step",
    },
    Object {
      "from": "2_B_revenue",
      "reason": "implicit import",
      "to": "3_B_revenue",
    },
    Object {
      "from": "0_revenue_impact",
      "reason": "implicit import",
      "to": "3_revenue_impact",
    },
    Object {
      "from": "1_units",
      "reason": "implicit import",
      "to": "3_units",
    },
    Object {
      "from": "1_price",
      "reason": "implicit import",
      "to": "3_price",
    },
    Object {
      "from": "3_units",
      "negs": Array [],
      "reason": "call",
      "to": "3_revenue",
    },
    Object {
      "from": "3_price",
      "negs": Array [],
      "reason": "call",
      "to": "3_revenue",
    },
    Object {
      "from": "3_units",
      "negs": Array [],
      "reason": "call",
      "to": "3_costs",
    },
    Object {
      "from": "3_revenue",
      "negs": Array [],
      "reason": "call",
      "to": "3_profit",
    },
    Object {
      "from": "3_costs",
      "negs": Array [],
      "reason": "call",
      "to": "3_profit",
    },
    Object {
      "from": "3_units_in",
      "reason": "input",
      "to": "3_units_",
    },
    Object {
      "from": "3_price_in",
      "reason": "input",
      "to": "3_price_",
    },
    Object {
      "from": "1_A_revenue",
      "reason": "implicit import",
      "to": "4_A_revenue",
    },
    Object {
      "from": "0_revenue_impact",
      "reason": "implicit import",
      "to": "4_revenue_impact",
    },
    Object {
      "from": "2_units",
      "reason": "implicit import",
      "to": "4_units",
    },
    Object {
      "from": "2_price",
      "reason": "implicit import",
      "to": "4_price",
    },
    Object {
      "from": "2_price_multiplier",
      "reason": "implicit import",
      "to": "4_price_multiplier",
    },
    Object {
      "from": "2_step",
      "reason": "implicit import",
      "to": "4_step",
    },
    Object {
      "from": "4_units",
      "negs": Array [],
      "reason": "call",
      "to": "4_revenue",
    },
    Object {
      "from": "4_price",
      "negs": Array [],
      "reason": "call",
      "to": "4_revenue",
    },
    Object {
      "from": "4_units",
      "negs": Array [],
      "reason": "call",
      "to": "4_costs",
    },
    Object {
      "from": "4_revenue",
      "negs": Array [],
      "reason": "call",
      "to": "4_profit",
    },
    Object {
      "from": "4_costs",
      "negs": Array [],
      "reason": "call",
      "to": "4_profit",
    },
    Object {
      "from": "4_units_in",
      "reason": "input",
      "to": "4_units_",
    },
    Object {
      "from": "4_price_in",
      "reason": "input",
      "to": "4_price_",
    },
  },
  "cul_scope_ids_to_resource": Map {
    0 => "./impactsAB.cul.js",
    1 => "./revenue-fixed-inputs.cul.js?cul_scope_id=1&cul_parent_scope_id=0",
    2 => "./price-change-reconciliation.cul.js?cul_scope_id=2&cul_parent_scope_id=0",
    3 => "./base.cul?cul_scope_id=3&cul_parent_scope_id=1",
    4 => "./base.cul?cul_scope_id=4&cul_parent_scope_id=2",
  },
  "import_sources_to_resource": Map {
    "0_./revenue-fixed-inputs.cul.js" => "./revenue-fixed-inputs.cul.js?cul_scope_id=1&cul_parent_scope_id=0",
    "0_./price-change-reconciliation.cul.js" => "./price-change-reconciliation.cul.js?cul_scope_id=2&cul_parent_scope_id=0",
    "1_./base.cul" => "./base.cul?cul_scope_id=3&cul_parent_scope_id=1",
    "2_./base.cul" => "./base.cul?cul_scope_id=4&cul_parent_scope_id=2",
  },
}
`;

exports[`manufacturing/memo-test 1`] = `
Object {
  "cul_functions": Map {
    "0_units$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "units_",
      "inputs": Array [
        "units_in",
      ],
      "name": "units$",
      "reason": "explicit import",
    },
    "0_revenue$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "revenue_",
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "name": "revenue$",
      "reason": "explicit import",
    },
    "0_price$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "price_",
      "inputs": Array [
        "price_in",
      ],
      "name": "price$",
      "reason": "explicit import",
    },
    "0_costs$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "costs_",
      "inputs": Array [
        "units_in",
      ],
      "name": "costs$",
      "reason": "explicit import",
    },
    "0_profit$" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "profit_",
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "name": "profit$",
      "reason": "explicit import",
    },
    "0_revenue" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 770,
          "line": 24,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 667,
          "line": 21,
        },
      },
      "name": "revenue",
      "reason": "definition",
    },
    "0_price" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 892,
          "line": 28,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 793,
          "line": 25,
        },
      },
      "name": "price",
      "reason": "definition",
    },
    "0_units" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 1014,
          "line": 32,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 915,
          "line": 29,
        },
      },
      "name": "units",
      "reason": "definition",
    },
    "0_costs" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 1136,
          "line": 36,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 1037,
          "line": 33,
        },
      },
      "name": "costs",
      "reason": "definition",
    },
    "0_profit" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 1261,
          "line": 40,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 1160,
          "line": 37,
        },
      },
      "name": "profit",
      "reason": "definition",
    },
    "1_revenue" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "name": "revenue",
      "reason": "implicit import",
    },
    "1_price" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "price_in",
      ],
      "name": "price",
      "reason": "implicit import",
    },
    "1_units" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
      ],
      "name": "units",
      "reason": "implicit import",
    },
    "1_costs" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
      ],
      "name": "costs",
      "reason": "implicit import",
    },
    "1_profit" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "name": "profit",
      "reason": "implicit import",
    },
    "1_revenue_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 60,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 23,
          "line": 1,
        },
      },
      "name": "revenue_",
      "reason": "definition (renamed)",
    },
    "1_costs_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 40,
          "index": 142,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 123,
          "line": 6,
        },
      },
      "name": "costs_",
      "reason": "definition (renamed)",
    },
    "1_profit_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 47,
          "index": 192,
          "line": 8,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 167,
          "line": 8,
        },
      },
      "name": "profit_",
      "reason": "definition (renamed)",
    },
    "1_units_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 240,
          "line": 11,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 226,
          "line": 11,
        },
      },
      "name": "units_",
      "reason": "definition (renamed)",
    },
    "1_units_in" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
      ],
      "name": "units_in",
      "reason": "input definition",
    },
    "1_price_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 277,
          "line": 12,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 263,
          "line": 12,
        },
      },
      "name": "price_",
      "reason": "definition (renamed)",
    },
    "1_price_in" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "price_in",
      ],
      "name": "price_in",
      "reason": "input definition",
    },
  },
  "cul_input_map": Map {
    "0_units$" => Set {
      "units_in",
    },
    "0_revenue$" => Set {
      "units_in",
      "price_in",
    },
    "0_price$" => Set {
      "price_in",
    },
    "0_costs$" => Set {
      "units_in",
    },
    "0_profit$" => Set {
      "units_in",
      "price_in",
    },
    "0_revenue" => Set {
      "units_in",
      "price_in",
    },
    "0_price" => Set {
      "price_in",
    },
    "0_units" => Set {
      "units_in",
    },
    "0_costs" => Set {
      "units_in",
    },
    "0_profit" => Set {
      "units_in",
      "price_in",
    },
    "1_revenue" => Set {
      "units_in",
      "price_in",
    },
    "1_price" => Set {
      "price_in",
    },
    "1_units" => Set {
      "units_in",
    },
    "1_costs" => Set {
      "units_in",
    },
    "1_profit" => Set {
      "units_in",
      "price_in",
    },
    "1_revenue_" => Set {
      "units_in",
      "price_in",
    },
    "1_costs_" => Set {
      "units_in",
    },
    "1_profit_" => Set {
      "units_in",
      "price_in",
    },
    "1_units_" => Set {
      "units_in",
    },
    "1_units_in" => Set {
      "units_in",
    },
    "1_price_" => Set {
      "price_in",
    },
    "1_price_in" => Set {
      "price_in",
    },
  },
  "cul_links": Set {
    Object {
      "from": "1_units_",
      "reason": "explicit import",
      "to": "0_units$",
    },
    Object {
      "from": "1_revenue_",
      "reason": "explicit import",
      "to": "0_revenue$",
    },
    Object {
      "from": "1_price_",
      "reason": "explicit import",
      "to": "0_price$",
    },
    Object {
      "from": "1_costs_",
      "reason": "explicit import",
      "to": "0_costs$",
    },
    Object {
      "from": "1_profit_",
      "reason": "explicit import",
      "to": "0_profit$",
    },
    Object {
      "from": "0_revenue$",
      "negs": Array [],
      "reason": "call",
      "to": "0_revenue",
    },
    Object {
      "from": "0_price$",
      "negs": Array [],
      "reason": "call",
      "to": "0_price",
    },
    Object {
      "from": "0_units$",
      "negs": Array [],
      "reason": "call",
      "to": "0_units",
    },
    Object {
      "from": "0_costs$",
      "negs": Array [],
      "reason": "call",
      "to": "0_costs",
    },
    Object {
      "from": "0_profit$",
      "negs": Array [],
      "reason": "call",
      "to": "0_profit",
    },
    Object {
      "from": "0_revenue",
      "reason": "implicit import",
      "to": "1_revenue",
    },
    Object {
      "from": "0_price",
      "reason": "implicit import",
      "to": "1_price",
    },
    Object {
      "from": "0_units",
      "reason": "implicit import",
      "to": "1_units",
    },
    Object {
      "from": "0_costs",
      "reason": "implicit import",
      "to": "1_costs",
    },
    Object {
      "from": "0_profit",
      "reason": "implicit import",
      "to": "1_profit",
    },
    Object {
      "from": "1_units",
      "negs": Array [],
      "reason": "call",
      "to": "1_revenue_",
    },
    Object {
      "from": "1_price",
      "negs": Array [],
      "reason": "call",
      "to": "1_revenue_",
    },
    Object {
      "from": "1_units",
      "negs": Array [],
      "reason": "call",
      "to": "1_costs_",
    },
    Object {
      "from": "1_revenue",
      "negs": Array [],
      "reason": "call",
      "to": "1_profit_",
    },
    Object {
      "from": "1_costs",
      "negs": Array [],
      "reason": "call",
      "to": "1_profit_",
    },
    Object {
      "from": "1_units_in",
      "reason": "input",
      "to": "1_units_",
    },
    Object {
      "from": "1_price_in",
      "reason": "input",
      "to": "1_price_",
    },
  },
  "cul_scope_ids_to_resource": Map {
    0 => "./memo-test.cul.js",
    1 => "./base.cul?cul_scope_id=1&cul_parent_scope_id=0",
  },
  "import_sources_to_resource": Map {
    "0_./base.cul" => "./base.cul?cul_scope_id=1&cul_parent_scope_id=0",
  },
}
`;

exports[`manufacturing/price-change-reconciliation 1`] = `
Object {
  "cul_functions": Map {
    "0_revenue" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "revenue",
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "name": "revenue",
      "reason": "explicit import",
    },
    "0_units_1" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "units_",
      "inputs": Array [
        "units_in",
      ],
      "name": "units_1",
      "reason": "explicit import",
    },
    "0_price_1" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "price_",
      "inputs": Array [
        "price_in",
      ],
      "name": "price_1",
      "reason": "explicit import",
    },
    "0_units" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 70,
          "index": 1488,
          "line": 22,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 1412,
          "line": 21,
        },
      },
      "name": "units",
      "reason": "definition",
    },
    "0_price" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "price_in",
        "price_multiplier_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 57,
          "index": 1547,
          "line": 23,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 1511,
          "line": 23,
        },
      },
      "name": "price",
      "reason": "definition",
    },
    "0_price_multiplier" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "price_multiplier_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 57,
          "index": 1621,
          "line": 26,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 32,
          "index": 1596,
          "line": 26,
        },
      },
      "name": "price_multiplier",
      "reason": "definition",
    },
    "0_price_multiplier_in" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "price_multiplier_in",
      ],
      "name": "price_multiplier_in",
      "reason": "input definition",
    },
    "0_step" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "step_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 33,
          "index": 1656,
          "line": 27,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 20,
          "index": 1643,
          "line": 27,
        },
      },
      "name": "step",
      "reason": "definition",
    },
    "0_step_in" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "step_in",
      ],
      "name": "step_in",
      "reason": "input definition",
    },
    "1_units" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "name": "units",
      "reason": "implicit import",
    },
    "1_price" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "price_in",
        "price_multiplier_in",
      ],
      "name": "price",
      "reason": "implicit import",
    },
    "1_price_multiplier" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "price_multiplier_in",
      ],
      "name": "price_multiplier",
      "reason": "implicit import",
    },
    "1_step" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "step_in",
      ],
      "name": "step",
      "reason": "implicit import",
    },
    "1_revenue" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 60,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 23,
          "line": 1,
        },
      },
      "name": "revenue",
      "reason": "definition",
    },
    "1_costs" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 40,
          "index": 142,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 123,
          "line": 6,
        },
      },
      "name": "costs",
      "reason": "definition",
    },
    "1_profit" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "step_in",
        "units_in",
        "price_in",
        "price_multiplier_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 47,
          "index": 192,
          "line": 8,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 167,
          "line": 8,
        },
      },
      "name": "profit",
      "reason": "definition",
    },
    "1_units_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 240,
          "line": 11,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 226,
          "line": 11,
        },
      },
      "name": "units_",
      "reason": "definition (renamed)",
    },
    "1_units_in" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
      ],
      "name": "units_in",
      "reason": "input definition",
    },
    "1_price_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 277,
          "line": 12,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 263,
          "line": 12,
        },
      },
      "name": "price_",
      "reason": "definition (renamed)",
    },
    "1_price_in" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "price_in",
      ],
      "name": "price_in",
      "reason": "input definition",
    },
  },
  "cul_input_map": Map {
    "0_revenue" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "0_units_1" => Set {
      "units_in",
    },
    "0_price_1" => Set {
      "price_in",
    },
    "0_units" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "0_price" => Set {
      "price_in",
      "price_multiplier_in",
    },
    "0_price_multiplier" => Set {
      "price_multiplier_in",
    },
    "0_price_multiplier_in" => Set {
      "price_multiplier_in",
    },
    "0_step" => Set {
      "step_in",
    },
    "0_step_in" => Set {
      "step_in",
    },
    "1_units" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "1_price" => Set {
      "price_in",
      "price_multiplier_in",
    },
    "1_price_multiplier" => Set {
      "price_multiplier_in",
    },
    "1_step" => Set {
      "step_in",
    },
    "1_revenue" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "1_costs" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "1_profit" => Set {
      "step_in",
      "units_in",
      "price_in",
      "price_multiplier_in",
    },
    "1_units_" => Set {
      "units_in",
    },
    "1_units_in" => Set {
      "units_in",
    },
    "1_price_" => Set {
      "price_in",
    },
    "1_price_in" => Set {
      "price_in",
    },
  },
  "cul_links": Set {
    Object {
      "from": "1_revenue",
      "reason": "explicit import",
      "to": "0_revenue",
    },
    Object {
      "from": "1_units_",
      "reason": "explicit import",
      "to": "0_units_1",
    },
    Object {
      "from": "1_price_",
      "reason": "explicit import",
      "to": "0_price_1",
    },
    Object {
      "from": "0_step",
      "negs": Array [],
      "reason": "call",
      "to": "0_units",
    },
    Object {
      "from": "0_units_1",
      "negs": Array [],
      "reason": "call",
      "to": "0_units",
    },
    Object {
      "from": "0_price",
      "negs": Array [],
      "reason": "call",
      "to": "0_units",
    },
    Object {
      "from": "0_price_1",
      "negs": Array [],
      "reason": "call",
      "to": "0_units",
    },
    Object {
      "from": "0_units_1",
      "negs": Array [],
      "reason": "call",
      "to": "0_units",
    },
    Object {
      "from": "0_price_1",
      "negs": Array [],
      "reason": "call",
      "to": "0_price",
    },
    Object {
      "from": "0_price_multiplier",
      "negs": Array [],
      "reason": "call",
      "to": "0_price",
    },
    Object {
      "from": "0_price_multiplier_in",
      "reason": "input",
      "to": "0_price_multiplier",
    },
    Object {
      "from": "0_step_in",
      "reason": "input",
      "to": "0_step",
    },
    Object {
      "from": "0_units",
      "reason": "implicit import",
      "to": "1_units",
    },
    Object {
      "from": "0_price",
      "reason": "implicit import",
      "to": "1_price",
    },
    Object {
      "from": "0_price_multiplier",
      "reason": "implicit import",
      "to": "1_price_multiplier",
    },
    Object {
      "from": "0_step",
      "reason": "implicit import",
      "to": "1_step",
    },
    Object {
      "from": "1_units",
      "negs": Array [],
      "reason": "call",
      "to": "1_revenue",
    },
    Object {
      "from": "1_price",
      "negs": Array [],
      "reason": "call",
      "to": "1_revenue",
    },
    Object {
      "from": "1_units",
      "negs": Array [],
      "reason": "call",
      "to": "1_costs",
    },
    Object {
      "from": "1_revenue",
      "negs": Array [],
      "reason": "call",
      "to": "1_profit",
    },
    Object {
      "from": "1_costs",
      "negs": Array [],
      "reason": "call",
      "to": "1_profit",
    },
    Object {
      "from": "1_units_in",
      "reason": "input",
      "to": "1_units_",
    },
    Object {
      "from": "1_price_in",
      "reason": "input",
      "to": "1_price_",
    },
  },
  "cul_scope_ids_to_resource": Map {
    0 => "./price-change-reconciliation.cul.js",
    1 => "./base.cul?cul_scope_id=1&cul_parent_scope_id=0",
  },
  "import_sources_to_resource": Map {
    "0_./base.cul" => "./base.cul?cul_scope_id=1&cul_parent_scope_id=0",
  },
}
`;

exports[`manufacturing/revenue-fixed-inputs 1`] = `
Object {
  "cul_functions": Map {
    "0_revenue" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "revenue",
      "inputs": Array [],
      "name": "revenue",
      "reason": "explicit import",
    },
    "0_units" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 30,
          "index": 89,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 80,
          "line": 4,
        },
      },
      "name": "units",
      "reason": "definition",
    },
    "0_price" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 30,
          "index": 121,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 112,
          "line": 5,
        },
      },
      "name": "price",
      "reason": "definition",
    },
    "1_units" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [],
      "name": "units",
      "reason": "implicit import",
    },
    "1_price" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [],
      "name": "price",
      "reason": "implicit import",
    },
    "1_revenue" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 60,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 23,
          "line": 1,
        },
      },
      "name": "revenue",
      "reason": "definition",
    },
    "1_costs" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 40,
          "index": 142,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 123,
          "line": 6,
        },
      },
      "name": "costs",
      "reason": "definition",
    },
    "1_profit" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 47,
          "index": 192,
          "line": 8,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 167,
          "line": 8,
        },
      },
      "name": "profit",
      "reason": "definition",
    },
    "1_units_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 240,
          "line": 11,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 226,
          "line": 11,
        },
      },
      "name": "units_",
      "reason": "definition (renamed)",
    },
    "1_units_in" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
      ],
      "name": "units_in",
      "reason": "input definition",
    },
    "1_price_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 277,
          "line": 12,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 263,
          "line": 12,
        },
      },
      "name": "price_",
      "reason": "definition (renamed)",
    },
    "1_price_in" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "price_in",
      ],
      "name": "price_in",
      "reason": "input definition",
    },
  },
  "cul_input_map": Map {
    "0_revenue" => Set {},
    "0_units" => Set {},
    "0_price" => Set {},
    "1_units" => Set {},
    "1_price" => Set {},
    "1_revenue" => Set {},
    "1_costs" => Set {},
    "1_profit" => Set {},
    "1_units_" => Set {
      "units_in",
    },
    "1_units_in" => Set {
      "units_in",
    },
    "1_price_" => Set {
      "price_in",
    },
    "1_price_in" => Set {
      "price_in",
    },
  },
  "cul_links": Set {
    Object {
      "from": "1_revenue",
      "reason": "explicit import",
      "to": "0_revenue",
    },
    Object {
      "from": "0_units",
      "reason": "implicit import",
      "to": "1_units",
    },
    Object {
      "from": "0_price",
      "reason": "implicit import",
      "to": "1_price",
    },
    Object {
      "from": "1_units",
      "negs": Array [],
      "reason": "call",
      "to": "1_revenue",
    },
    Object {
      "from": "1_price",
      "negs": Array [],
      "reason": "call",
      "to": "1_revenue",
    },
    Object {
      "from": "1_units",
      "negs": Array [],
      "reason": "call",
      "to": "1_costs",
    },
    Object {
      "from": "1_revenue",
      "negs": Array [],
      "reason": "call",
      "to": "1_profit",
    },
    Object {
      "from": "1_costs",
      "negs": Array [],
      "reason": "call",
      "to": "1_profit",
    },
    Object {
      "from": "1_units_in",
      "reason": "input",
      "to": "1_units_",
    },
    Object {
      "from": "1_price_in",
      "reason": "input",
      "to": "1_price_",
    },
  },
  "cul_scope_ids_to_resource": Map {
    0 => "./revenue-fixed-inputs.cul.js",
    1 => "./base.cul?cul_scope_id=1&cul_parent_scope_id=0",
  },
  "import_sources_to_resource": Map {
    "0_./base.cul" => "./base.cul?cul_scope_id=1&cul_parent_scope_id=0",
  },
}
`;

exports[`manufacturing/revenue-with-demand-curve 1`] = `
Object {
  "cul_functions": Map {
    "0_revenue" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "revenue",
      "inputs": Array [
        "price_in",
      ],
      "name": "revenue",
      "reason": "explicit import",
    },
    "0_price" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "price",
      "inputs": Array [
        "price_in",
      ],
      "name": "price",
      "reason": "explicit import",
    },
    "0_profit" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 1,
      "imported": "profit",
      "inputs": Array [
        "price_in",
      ],
      "name": "profit",
      "reason": "explicit import",
    },
    "0_units" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 47,
          "index": 164,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 138,
          "line": 5,
        },
      },
      "name": "units",
      "reason": "definition",
    },
    "1_units" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "price_in",
      ],
      "name": "units",
      "reason": "implicit import",
    },
    "1_revenue" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "index": 60,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 23,
          "line": 1,
        },
      },
      "name": "revenue",
      "reason": "definition",
    },
    "1_costs" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 40,
          "index": 142,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 123,
          "line": 6,
        },
      },
      "name": "costs",
      "reason": "definition",
    },
    "1_profit" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 47,
          "index": 192,
          "line": 8,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 22,
          "index": 167,
          "line": 8,
        },
      },
      "name": "profit",
      "reason": "definition",
    },
    "1_units_" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 240,
          "line": 11,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 226,
          "line": 11,
        },
      },
      "name": "units_",
      "reason": "definition (renamed)",
    },
    "1_units_in" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "units_in",
      ],
      "name": "units_in",
      "reason": "input definition",
    },
    "1_price" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "price_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 35,
          "index": 277,
          "line": 12,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 21,
          "index": 263,
          "line": 12,
        },
      },
      "name": "price",
      "reason": "definition",
    },
    "1_price_in" => Object {
      "cul_scope_id": 1,
      "cul_source_scope_id": 1,
      "inputs": Array [
        "price_in",
      ],
      "name": "price_in",
      "reason": "input definition",
    },
  },
  "cul_input_map": Map {
    "0_revenue" => Set {
      "price_in",
    },
    "0_price" => Set {
      "price_in",
    },
    "0_profit" => Set {
      "price_in",
    },
    "0_units" => Set {
      "price_in",
    },
    "1_units" => Set {
      "price_in",
    },
    "1_revenue" => Set {
      "price_in",
    },
    "1_costs" => Set {
      "price_in",
    },
    "1_profit" => Set {
      "price_in",
    },
    "1_units_" => Set {
      "units_in",
    },
    "1_units_in" => Set {
      "units_in",
    },
    "1_price" => Set {
      "price_in",
    },
    "1_price_in" => Set {
      "price_in",
    },
  },
  "cul_links": Set {
    Object {
      "from": "1_revenue",
      "reason": "explicit import",
      "to": "0_revenue",
    },
    Object {
      "from": "1_price",
      "reason": "explicit import",
      "to": "0_price",
    },
    Object {
      "from": "1_profit",
      "reason": "explicit import",
      "to": "0_profit",
    },
    Object {
      "from": "0_price",
      "negs": Array [],
      "reason": "call",
      "to": "0_units",
    },
    Object {
      "from": "0_units",
      "reason": "implicit import",
      "to": "1_units",
    },
    Object {
      "from": "1_units",
      "negs": Array [],
      "reason": "call",
      "to": "1_revenue",
    },
    Object {
      "from": "1_price",
      "negs": Array [],
      "reason": "call",
      "to": "1_revenue",
    },
    Object {
      "from": "1_units",
      "negs": Array [],
      "reason": "call",
      "to": "1_costs",
    },
    Object {
      "from": "1_revenue",
      "negs": Array [],
      "reason": "call",
      "to": "1_profit",
    },
    Object {
      "from": "1_costs",
      "negs": Array [],
      "reason": "call",
      "to": "1_profit",
    },
    Object {
      "from": "1_units_in",
      "reason": "input",
      "to": "1_units_",
    },
    Object {
      "from": "1_price_in",
      "reason": "input",
      "to": "1_price",
    },
  },
  "cul_scope_ids_to_resource": Map {
    0 => "./revenue-with-demand-curve.cul.js",
    1 => "./base.cul?cul_scope_id=1&cul_parent_scope_id=0",
  },
  "import_sources_to_resource": Map {
    "0_./base.cul" => "./base.cul?cul_scope_id=1&cul_parent_scope_id=0",
  },
}
`;

exports[`manufacturing/simple-neg-A 1`] = `
Object {
  "cul_functions": Map {
    "0_sales_by_product" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 65,
          "index": 193,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 32,
          "index": 160,
          "line": 4,
        },
      },
      "name": "sales_by_product",
      "reason": "definition",
    },
    "0_product" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 39,
          "index": 234,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 218,
          "line": 5,
        },
      },
      "name": "product",
      "reason": "definition",
    },
    "0_product_in" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "name": "product_in",
      "reason": "input definition",
    },
    "0_sales_total" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 60,
          "index": 329,
          "line": 7,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 27,
          "index": 263,
          "line": 6,
        },
      },
      "name": "sales_total",
      "reason": "definition",
    },
  },
  "cul_input_map": Map {
    "0_sales_by_product" => Set {
      "product_in",
    },
    "0_product" => Set {
      "product_in",
    },
    "0_product_in" => Set {
      "product_in",
    },
    "0_sales_total" => Set {
      "product_in",
    },
  },
  "cul_links": Set {
    Object {
      "from": "0_product",
      "negs": Array [],
      "reason": "call",
      "to": "0_sales_by_product",
    },
    Object {
      "from": "0_product_in",
      "reason": "input",
      "to": "0_product",
    },
    Object {
      "from": "0_sales_by_product",
      "negs": Array [
        "product_in",
      ],
      "reason": "call",
      "to": "0_sales_total",
    },
    Object {
      "from": "0_sales_by_product",
      "negs": Array [],
      "reason": "call",
      "to": "0_sales_total",
    },
  },
  "cul_scope_ids_to_resource": Map {
    0 => "./simple-neg-A.cul.js",
  },
  "import_sources_to_resource": Map {},
}
`;

exports[`manufacturing/simple-neg-B 1`] = `
Object {
  "cul_functions": Map {
    "0_sales_by_product" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 65,
          "index": 193,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 32,
          "index": 160,
          "line": 4,
        },
      },
      "name": "sales_by_product",
      "reason": "definition",
    },
    "0_product" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 39,
          "index": 234,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 218,
          "line": 5,
        },
      },
      "name": "product",
      "reason": "definition",
    },
    "0_product_in" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "name": "product_in",
      "reason": "input definition",
    },
    "0_sales_total" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 75,
          "index": 344,
          "line": 7,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 27,
          "index": 263,
          "line": 6,
        },
      },
      "name": "sales_total",
      "reason": "definition",
    },
  },
  "cul_input_map": Map {
    "0_sales_by_product" => Set {
      "product_in",
    },
    "0_product" => Set {
      "product_in",
    },
    "0_product_in" => Set {
      "product_in",
    },
    "0_sales_total" => Set {},
  },
  "cul_links": Set {
    Object {
      "from": "0_product",
      "negs": Array [],
      "reason": "call",
      "to": "0_sales_by_product",
    },
    Object {
      "from": "0_product_in",
      "reason": "input",
      "to": "0_product",
    },
    Object {
      "from": "0_sales_by_product",
      "negs": Array [
        "product_in",
      ],
      "reason": "call",
      "to": "0_sales_total",
    },
    Object {
      "from": "0_sales_by_product",
      "negs": Array [
        "product_in",
      ],
      "reason": "call",
      "to": "0_sales_total",
    },
  },
  "cul_scope_ids_to_resource": Map {
    0 => "./simple-neg-B.cul.js",
  },
  "import_sources_to_resource": Map {},
}
`;

exports[`manufacturing/simple-neg-C 1`] = `
Object {
  "cul_functions": Map {
    "0_sales_by_product" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 65,
          "index": 193,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 32,
          "index": 160,
          "line": 4,
        },
      },
      "name": "sales_by_product",
      "reason": "definition",
    },
    "0_product" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "loc": SourceLocation {
        "end": Position {
          "column": 39,
          "index": 234,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 23,
          "index": 218,
          "line": 5,
        },
      },
      "name": "product",
      "reason": "definition",
    },
    "0_product_in" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [
        "product_in",
      ],
      "name": "product_in",
      "reason": "input definition",
    },
    "0_sales_total" => Object {
      "cul_scope_id": 0,
      "cul_source_scope_id": 0,
      "inputs": Array [],
      "loc": SourceLocation {
        "end": Position {
          "column": 56,
          "index": 325,
          "line": 7,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 27,
          "index": 263,
          "line": 6,
        },
      },
      "name": "sales_total",
      "reason": "definition",
    },
  },
  "cul_input_map": Map {
    "0_sales_by_product" => Set {
      "product_in",
    },
    "0_product" => Set {
      "product_in",
    },
    "0_product_in" => Set {
      "product_in",
    },
    "0_sales_total" => Set {},
  },
  "cul_links": Set {
    Object {
      "from": "0_product",
      "negs": Array [],
      "reason": "call",
      "to": "0_sales_by_product",
    },
    Object {
      "from": "0_product_in",
      "reason": "input",
      "to": "0_product",
    },
    Object {
      "from": "0_sales_by_product",
      "negs": Array [
        "product_in",
      ],
      "reason": "call",
      "to": "0_sales_total",
    },
  },
  "cul_scope_ids_to_resource": Map {
    0 => "./simple-neg-C.cul.js",
  },
  "import_sources_to_resource": Map {},
}
`;
